--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>New Tool</title>
 </head>
 
-
 <style>
 * { font-family: 'Arial', sans-serif; }
 
@@ -17,9 +16,9 @@ body { background: #ededed; }
 	border-radius:6px;
 	color:#666;
 	margin:0 auto;
-	padding: 5px;
 	text-align:center;
 	width:500px;
+	padding:10px;
 }
 
 p {	line-height:1.3em; }
@@ -34,7 +33,7 @@ code {
 	padding: 1px 3px;
 }
 
-#imgTool
+#lnkGrabr {
 	background: #06C;
 	border-radius:6px;
 	color:#fff;
@@ -44,7 +43,7 @@ code {
 	text-decoration:none;
 }
 
-#imgTool {
+#lnkGrabr:hover {
 	background: #006;
 	box-shadow: #999 1px 1px 1px;
 }
@@ -54,11 +53,12 @@ code {
 
 <div id="wrapper">
 	<h1>Image Tool</h1>
-    <p>Create "a link" snippets on the fly.<br>
+    <p>Create "a banner link" snippet on the fly.<br>
 	<br>    
-    Simply drag this to your tool bar, and then click it when you are on a page that you want to generate a link from. The cursor will turn into a "Cross hair" on images you can grab code from.</p>
+    Simply drag this to your tool bar of chrome or firefox, and then click it when you are on a page that you want to generate a link from. The cursor will turn into a "Cross hair" on images you can grab code from.</p>
+	<p>Once you click the image a new window will appear in the top right corner of your screen. You can then select and copy the image path, the link or the all inclusive html tag to create a new linked banner. When finished, hit "F5" to reload the screen and browse as normal.</p>
     <br>    
-    <a id="imgTool="javascript:(function(e,a,g,h,f,c,b,d){if(!(f=e.jQuery)||g>f.fn.jquery||h(f)){c=a.createElement('script');c.type='text/javascript';c.src='http://ajax.googleapis.com/ajax/libs/jquery/'+g+'/jquery.min.js';c.onload=c.onreadystatechange=function(){if(!b&&(!(d=this.readyState)||d=='loaded'||d=='complete')){h((f=e.jQuery).noConflict(1),b=1);f(c).remove()}};a.documentElement.childNodes[0].appendChild(c)}})(window,document,'1.11.1',function($,L){$('a').click(function(e){e.preventDefault();});$('img').css('cursor', 'crosshair');$(document).on('click','img',function(){var altimg = $(this).attr('alt');var srcimg = $(this).attr('src');var linkSrc = $(this).parent().attr('href');$('body').append('<style>.infoBox {position:absolute;margin:5px;padding:10px;top:40px;right:40px;display:block;background:#fff;border:solid 2px #cce;	border-radius:5px;box-shadow:3px 3px 30px #333;z-index:10;min-width:180px;max-width:300px;min-height:240px;max-height:550px;}</style><div id=\'nfobx\' class=\'infoBox\'><br>The Image ALT Text is: <span style=\'font-family:courier;color:#900;\'><br>'+altimg+'</span><br><br>The Image Path is: <span style=\'font-family:courier;color:#900;\'><br>'+srcimg+'</span><br><br>The Image URL is: <span style=\'font-family:courier;color:#900;\'><br>'+linkSrc+'</span><br><br><br><br>The Full Code Snippet is:<br><br><span style=\'font-family:courier;color:#900;font-size:12px;\'>&amp;lt;a href='+linkSrc+' target=\'_parent\'&amp;gt;&amp;lt;img src='+srcimg+' alt='+altimg+' title='+altimg+'&amp;gt;&amp;lt;/a&amp;gt;</span></div>');});});">New Img Tool</a>
+    <a id="lnkGrabr" href="javascript:(function(e,a,g,h,f,c,b,d){if(!(f=e.jQuery)||g>f.fn.jquery||h(f)){c=a.createElement('script');c.type='text/javascript';c.src='http://ajax.googleapis.com/ajax/libs/jquery/'+g+'/jquery.min.js';c.onload=c.onreadystatechange=function(){if(!b&&(!(d=this.readyState)||d=='loaded'||d=='complete')){h((f=e.jQuery).noConflict(1),b=1);f(c).remove()}};a.documentElement.childNodes[0].appendChild(c)}})(window,document,'1.11.1',function($,L){$('a').click(function(e){e.preventDefault();});$('img').css('cursor', 'crosshair');$(document).on('click','img',function(){var altimg = $(this).attr('alt');var srcimg = $(this).attr('src');var linkSrc = $(this).parent().attr('href');$('body').append('<style>.infoBox {position:absolute;margin:5px;word-wrap: break-word;padding:10px 20px;top:40px;right:40px;display:block;background:#fff;border:solid 2px #900;	border-radius:5px;box-shadow:0px 0px 60px #000;z-index:10;min-width:180px;max-width:300px;min-height:240px;max-height:550px;}</style><div id=\'nfobx\' class=\'infoBox\'><br>The Image ALT Text is: <span style=\'font-family:courier;color:#900;\'><br>&#34;'+altimg+'&#34;</span><br><br>The Image Path is: <span style=\'font-family:courier;color:#900;\'><br>&#34;'+srcimg+'&#34;</span><br><br>The Image URL is: <span style=\'font-family:courier;color:#900;\'><br>&#34;'+linkSrc+'&#34;</span><br><br><br><br>The Full Code Snippet is:<br><br><span style=\'font-family:courier;color:#900;font-size:12px;\'>&amp;lt;a href=&#34;'+linkSrc+'&#34; target=\'_parent\'&amp;gt;&amp;lt;img src=&#34;'+srcimg+'&#34; alt=&#34;'+altimg+'&#34; title=&#34;'+altimg+'&#34;&amp;gt;&amp;lt;/a&amp;gt;</span></div>');});});">New Img Tool</a>
 </div>
 
 </body>
